--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@ camera.position.set( 0, 0, 100 );
 camera.lookAt( 0, 0, 0 );
 
 const scene = new THREE.Scene();
-const material = new THREE.LineBasicMaterial( { color: #C71585 } );
+const material = new THREE.LineBasicMaterial( { color: 0x00ff00  } );
 const points = [];
 points.push( new THREE.Vector3( - 5, 0, 0 ) );
 points.push( new THREE.Vector3( 0, 10, 0 ) );
